# ionis-skillz

./: .gitignore
ai-risk-audit/: SKILL.md
ai-risk-audit/references/: ai-assessment-scale.md  gdpr-audit.md  iso-42001-ai-governance.md  nist-ai-rmf.md  owasp-ai-testing.md  owasp-llm-top10.md
databricks-aitools/: SKILL.md
databricks-app-python/: 3-frameworks.md  SKILL.md
databricks-app-python/examples/: fm-minimal-chat.py  fm-parallel-calls.py  fm-structured-outputs.py  llm_config.py
databricks-data-generation/: SKILL.md
databricks-gotchas/: SKILL.md
databricks-gotchas/references/: databricks-ai-dev-kit-mcp-gotchas.md  databricks-apps-gotchas.md  databricks-sql-udf-gotchas.md  databricks-uc-governance-gotchas.md  lakebase-introspection.md
databricks-icon-lookup/: SKILL.md
databricks-icon-lookup/reference/: icon-inventory.md
databricks-impeccable/: SKILL.md
databricks-impeccable/reference/: brand-rules.md  brand-tokens.css  brand-tokens.json  color-and-contrast.md  components.md  craft.md  extract.md  interaction-design.md  motion-design.md  responsive-design.md  spatial-design.md  typography.md  ux-writing.md
databricks-jobs/: SKILL.md
databricks-pipelines/: SKILL.md
databricks-python/: SKILL.md
databricks-python/assets/templates/: pyproject.toml
databricks-python/assets/templates/src/: connect_session.py
databricks-serverless-migration/: SKILL.md
ionis-app-system/: SKILL.md
ionis-brand-slides/: README.md  SKILL.md
refresh-databricks-skills/: SKILL.md  refresh-global-databricks-skills.sh
ux-audit/: SKILL.md
(+60 files in other folders)
