[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "{{PROJECT_DESCRIPTION}}"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Robby Kiskanyan", email = "robby.kiskanyan@databricks.com" }]

dependencies = [
    "databricks-connect>=17.2,<18",
    "databricks-sdk[notebook]>=0.90.0",
    "fastapi>=0.115",
    "polars>=1.38",
    "uvicorn>=0.34",
    "nbformat>=5.10",
    "ipykernel>=7.2",
    "psycopg>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.8",
    "ruff>=0.15",
    "ty>=0.0.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["{{PROJECT_MODULE}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
